--- a/README
+++ b/README
@@ -30,6 +30,9 @@ This is a simple and responsive Temperature Converter application built with HTM
 ```bash
 git clone https://github.com/CharlesFaye/temperature-converter-app.git
 
+2. Navigate into the folder
+cd temperature-converter-app
+
 3. Open index.html in your browser
 (or use Live Server in VS Code)
 
